<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/baseline_library_books_24" />

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="152dp"
        android:padding="10sp">

        <TextView
            android:id="@+id/tv_borrow_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrow_your_books"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space_title_name"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toTopOf="@id/text_input_name"
            app:layout_constraintTop_toBottomOf="@id/tv_borrow_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            app:layout_constraintTop_toBottomOf="@id/space_title_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_borrow_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:id="@+id/space_name_categories"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toTopOf="@id/text_input_book"
            app:layout_constraintTop_toBottomOf="@id/text_input_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_book"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choose a book"
            app:layout_constraintTop_toBottomOf="@id/space_name_categories">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spn_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_input_book" />

        <Button
            android:id="@+id/btn_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My books"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spn_categories" />

        <TextView
            android:id="@+id/tv_book_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_books" />

        <Space
            android:id="@+id/space_categories"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toTopOf="@id/rdgrp_categories"
            app:layout_constraintTop_toBottomOf="@id/tv_book_category" />

        <RadioGroup
            android:id="@+id/rdgrp_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rd_brandnew"
            app:layout_constraintTop_toBottomOf="@id/space_categories">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_brandnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/brand_new" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/used" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_0"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rdgrp_categories" />

        <Button
            android:id="@+id/btn_quantity_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_secondaryContainer"
            android:text="-"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

        <Button
            android:id="@+id/btn_quantity_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="+"
            app:layout_constraintStart_toEndOf="@id/btn_quantity_decrease"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

        <Space
            android:id="@+id/space_quantity_price"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toTopOf="@id/tv_borrow_price"
            app:layout_constraintTop_toBottomOf="@id/btn_quantity_decrease" />

        <TextView
            android:id="@+id/tv_borrow_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borrow price: $0.00"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_quantity_price" />

        <Space
            android:id="@+id/space_price_order"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_order"
            app:layout_constraintTop_toBottomOf="@id/tv_borrow_price" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_secondaryContainer"
            android:text="@string/order"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_price_order" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_order"
            app:layout_constraintTop_toBottomOf="@id/space_price_order" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancel">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thank_you"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>